# NYU-RoboMaster-Capstone-demos

./: .gitignore  README.md
src/camera_architecture/: CMakeLists.txt  package.xml  save.txt
src/camera_architecture/src/: camera_publisher.cpp  faster_rcnn.cpp  image_display.cpp
src/demo_cv/: CMakeLists.txt  package.xml
src/demo_cv/src/: comp_traditional_cv.cpp  deeplearning_cv.cpp  image_publisher.cpp  traditional_cv.cpp  video_publisher.cpp
