<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_architecture</name>
  <version>0.0.0</version>
  <description>This is the codebase for Computer Vision tasks for the NYU RoboMaster team</description>
  <maintainer email="gr2159@nyu.edu">NYU RoboMaster team</maintainer>
  <license>MIT License</license>

  <!-- Dependencies -->
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>opencv2</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
